[package]
name = "loon"
version = "0.3.1"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple localization"
readme = "README.md"
repository = "https://github.com/kardeiz/loon"
keywords = ["i18n", "localization", "internationalization"]
categories = ["localization", "internationalization"]

[features]
default = ["yaml"]
yaml = ["serde_yaml"]

[dependencies]
strfmt = "0.1.6"
once_cell = "1"
serde_json = "1"
thiserror = "1"
glob = "0.3"
serde_yaml = { version = "0.8", optional = true }
toml = { version = "0.5.6", optional = true }
